update certificates and adjusting other things

--- a/html/index.html
+++ b/html/index.html
@@ -48,10 +48,13 @@
                 <div class="col-lg-10">
                     <div class="hero-content">
                         <h1 class="hero-title">Hossam Alsaedi</h1>
-                        <p class="hero-subtitle">IT Support & Web Developer</p>
-                        <p class="hero-description">
-                            I'm a passionate tech enthusiast with hands-on experience in web development and a growing skill set in IT support, Windows administration, and automation. Currently working on certifications like CompTIA A+ and ITIL4 to strengthen my position in the IT field. My goal is to combine practical IT support skills with development tools to solve real-world problems.
-                        </p>
+                        <p class="hero-subtitle">IT & Web Developer</p>
+                            <p class="hero-description">
+                                I’m someone who enjoys working with technology, whether it’s building simple web projects or solving everyday computer issues.
+                                I’m comfortable with Microsoft Office, web development basics, and using AI tools to make my work more efficient.
+                                I’m currently improving my IT skills through continuous learning and preparing for recognized certifications to grow in the tech field.
+                                My goal is to keep developing myself and eventually work in a role where I can apply and expand these skills.
+                            </p>
                         <div class="contact-buttons">
                             <a href="mailto:hossamsalsaedi@gmail.com" class="btn-gradient align-content-center">
                                 <i class="fas fa-envelope me-2"></i>Contact Me
@@ -77,43 +80,52 @@
             <h2 class="section-title">Technical Skills & Certifications</h2>
             <div class="section-content">
                 <!-- IT Support Skills -->
-                <div class="skills-category it">
-                    <h5><i class="fas fa-tools me-2"></i>IT & Support Knowledge</h5>
-                    <div class="skills-grid">
-                        <div class="skill-card">
-                            <i class="fa-solid fa-computer" style="color: #4facfe;"></i>
-                            <span>Computer Setup & OS Installation</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-plug" style="color: #43e97b;"></i>
-                            <span>Device Configuration</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-file-word" style="color: #2B579A;"></i>
-                            <span>Microsoft Word</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-file-powerpoint" style="color: #B7472A;"></i>
-                            <span>Microsoft PowerPoint</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-file-excel" style="color: #217346;"></i>
-                            <span>Microsoft Excel</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-terminal" style="color: #667eea;"></i>
-                            <span>Windows CMD</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-network-wired" style="color: #fa709a;"></i>
-                            <span>Basic Networking</span>
-                        </div>
-                        <div class="skill-card">
-                            <i class="fa-solid fa-user-cog" style="color: #764ba2;"></i>
-                            <span>User Account Management</span>
-                        </div>
-                    </div>
-                </div>
+<div class="skills-category it">
+    <h5><i class="fas fa-tools me-2"></i>IT & Support Knowledge</h5>
+    <div class="skills-grid">
+        <div class="skill-card">
+            <i class="fa-solid fa-computer" style="color: #4facfe;"></i>
+            <span>Computer Setup & OS Installation</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-plug" style="color: #43e97b;"></i>
+            <span>Device Configuration</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-file-word" style="color: #2B579A;"></i>
+            <span>Microsoft Word</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-file-powerpoint" style="color: #B7472A;"></i>
+            <span>Microsoft PowerPoint</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-file-excel" style="color: #217346;"></i>
+            <span>Microsoft Excel</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-terminal" style="color: #667eea;"></i>
+            <span>Windows CMD & PowerShell</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-network-wired" style="color: #fa709a;"></i>
+            <span>Basic Networking & Troubleshooting</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-user-cog" style="color: #764ba2;"></i>
+            <span>User Account Management</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-server" style="color: #f7971e;"></i>
+            <span>Cloud & Oracle OCI Basics</span>
+        </div>
+        <div class="skill-card">
+            <i class="fa-solid fa-brain" style="color: #ff9800;"></i>
+            <span>AI Tools & Automation</span>
+        </div>
+    </div>
+</div>
+
 
                 <!-- Web Development Skills -->
                 <div class="skills-category web">
@@ -150,9 +162,10 @@
                     </div>
                 </div>
 
-                <!-- Certifications -->
+
+                <!-- Professional Certifications -->
                 <div class="skills-category cert">
-                    <h5><i class="fas fa-certificate me-2"></i>Certifications</h5>
+                    <h5><i class="fas fa-certificate me-2"></i>Professional Certifications</h5>
                     <div class="skills-grid">
                         <div class="skill-card">
                             <i class="fa-solid fa-certificate" style="color: #4285f4;"></i>
@@ -170,14 +183,26 @@
                         </div>
 
                         <div class="skill-card">
-                            <i class="fa-solid fa-book-open-reader" style="color: #ff6b6b;"></i>
+                            <i class="fa-solid fa-check-circle" style="color: #43e97b;"></i>
+                            <div class="cert-name">CompTIA A+ Core 1</div>
+                            <div class="cert-status completed">Passed</div>
+                            <div class="cert-date">Earned: Oct 2025</div>
+                            <div class="cert-buttons">
+                                <a href="https://www.comptia.org/certifications/a" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="skill-card">
+                            <i class="fa-solid fa-pause-circle" style="color: #a8a8a8;"></i>
                             <div class="cert-name">CompTIA A+ Core 2</div>
-                            <div class="cert-status studying">Studying</div>
+                            <div class="cert-status on-hold">On Hold</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
-                                    <i class="fas fa-clock"></i> Pending
+                                    <i class="fas fa-pause"></i> Paused
                                 </button>
-                                <a href="https://www.comptia.org/en-us/certifications/a/core-1-and-2-v15/#overview" target="_blank" class="cert-btn about">
+                                <a href="https://www.comptia.org/en/certifications/a/core-2-v15/" target="_blank" class="cert-btn about">
                                     <i class="fas fa-info-circle"></i> About
                                 </a>
                             </div>
@@ -186,7 +211,7 @@
                         <div class="skill-card">
                             <i class="fa-solid fa-layer-group" style="color: #845ec2;"></i>
                             <div class="cert-name">ITIL 4 Foundation</div>
-                            <div class="cert-status planned">Planned</div>
+                            <div class="cert-status on-hold">Planned</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-calendar-plus"></i> Planned
@@ -196,16 +221,117 @@
                                 </a>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+
+                <!-- Mostaqbali Program -->
+                <div class="skills-category cert">
+                    <h5><i class="fas fa-graduation-cap me-2"></i>Mostaqbali Program - MCIT</h5>
+                    <div class="program-highlight">
+                        <h6><i class="fas fa-star me-2"></i>Current Focus</h6>
+                        <p>Ministry of Communication and Information Technology Training Program</p>
+                    </div>
+                    <div class="skills-grid">
+                        <div class="skill-card">
+                            <i class="fa-solid fa-certificate" style="color: #4285f4;"></i>
+                            <div class="cert-name">OCI Foundation Associate</div>
+                            <div class="cert-status completed">Completed</div>
+                            <div class="cert-date">Earned: Nov 2025</div>
+                            <div class="cert-buttons">
+                                <a href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=ACAC0C7A9C4B9C7064E15DD0BECFA4AF161BFF6434D93BB7B1C9682061EAF128" target="_blank" class="cert-btn verify">
+                                    <i class="fas fa-shield-check"></i> Verify Badge
+                                </a>
+                                <a href="https://education.oracle.com/oracle-cloud-infrastructure-2024-foundations-associate/pexam_1Z0-1085-25" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
 
                         <div class="skill-card">
-                            <i class="fa-solid fa-file-word" style="color: #2B579A;"></i>
-                            <div class="cert-name">Microsoft Office Specialist Associate</div>
-                            <div class="cert-status planned">Planned</div>
+                            <i class="fa-solid fa-database" style="color: #4285f4;"></i>
+                            <div class="cert-name">Oracle Cloud Data Foundations Associate</div>
+                            <div class="cert-status in-progress">In Progress</div>
+                            <div class="cert-date">Currently Working On</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
-                                    <i class="fas fa-calendar-plus"></i> Planned
+                                    <i class="fas fa-clock"></i> In Progress
                                 </button>
-                                <a href="https://learn.microsoft.com/en-us/credentials/certifications/microsoft-office-specialist-associate-2019/" target="_blank" class="cert-btn about">
+                                <a href="https://education.oracle.com/oracle-cloud-infrastructure-2024-data-foundation-associate/pexam_1Z0-1195-25" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="skill-card">
+                            <i class="fa-solid fa-brain" style="color: #ff9800;"></i>
+                            <div class="cert-name">OCI AI Foundations Associate</div>
+                            <div class="cert-status planned">Coming Soon</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-hourglass-half"></i> Soon
+                                </button>
+                                <a href="https://education.oracle.com/oracle-cloud-infrastructure-2024-ai-foundations-associate/pexam_1Z0-1122-25" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="skill-card">
+                            <i class="fa-solid fa-users" style="color: #34A853;"></i>
+                            <div class="cert-name">Oracle Fusion Cloud HCM Process Essentials</div>
+                            <div class="cert-status planned">Coming Soon</div>
+                            <div class="cert-date">Human Capital Management</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-hourglass-half"></i> Soon
+                                </button>
+                                <a href="https://education.oracle.com/oracle-fusion-cloud-applications-hcm-foundations-associate-rel1/pexam_1Z0-1162-1" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="skill-card">
+                            <i class="fa-solid fa-chart-line" style="color: #EA4335;"></i>
+                            <div class="cert-name">Oracle Fusion Cloud ERP Process Essentials</div>
+                            <div class="cert-status planned">Coming Soon</div>
+                            <div class="cert-date">Enterprise Resource Planning</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-hourglass-half"></i> Soon
+                                </button>
+                                <a href="https://education.oracle.com/oracle-fusion-cloud-applications-erp-foundations-associate-rel1/pexam_1Z0-1160-1" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="skill-card">
+                            <i class="fa-solid fa-handshake" style="color: #FBBC04;"></i>
+                            <div class="cert-name">Oracle Fusion Cloud CX Process Essentials</div>
+                            <div class="cert-status planned">Coming Soon</div>
+                            <div class="cert-date">Customer Experience</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-hourglass-half"></i> Soon
+                                </button>
+                                <a href="https://education.oracle.com/oracle-fusion-cloud-applications-cx-foundations-associate-rel1/pexam_1Z0-1161-1" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="skill-card">
+                            <i class="fa-solid fa-truck" style="color: #764ba2;"></i>
+                            <div class="cert-name">Oracle Fusion Cloud SCM Process Essentials</div>
+                            <div class="cert-status planned">Coming Soon</div>
+                            <div class="cert-date">Supply Chain Management</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-hourglass-half"></i> Soon
+                                </button>
+                                <a href="https://education.oracle.com/oracle-fusion-cloud-applications-scm-foundations-associate-rel1/pexam_1Z0-1163-1" target="_blank" class="cert-btn about">
                                     <i class="fas fa-info-circle"></i> About
                                 </a>
                             </div>
