--- a/html/index.html
+++ b/html/index.html
@@ -385,7 +385,7 @@
                 <!-- QR Reader -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/QR-reader.jpg" alt="QR Reader Project" 
+                        <img src="/Portfolio/Image/QR-reader.jpg" alt="QR Reader Project" 
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/QR-reader.jpg'">
                     </div>
                     <div class="project-content">
