--- a/html/index.html
+++ b/html/index.html
@@ -421,7 +421,7 @@
                 <!-- PDF Editor -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/pdf-editor.jpg" alt="PDF Editor Project"
+                        <img src="/Portfolio/Image/pdf-editor.jpg" alt="PDF Editor Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/pdf-editor.jpg'">
                     </div>
                     <div class="project-content">
@@ -461,7 +461,7 @@
 <div class="project-card">
     <div class="project-image">
         <span class="status-badge" data-translate="in_progress">In Progress</span>
-        <img src="/Image/QnA.png" alt="Q&A Game Project"
+        <img src="/Portfolio/Image/QnA.png" alt="Q&A Game Project"
         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/QnA.png'">
     </div>
     <div class="project-content">
@@ -499,7 +499,7 @@
                 <!-- Shop Application -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/shop.png" alt="Shop Application Project"
+                        <img src="/Portfolio/Image/shop.png" alt="Shop Application Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/shop.png'">
                     </div>
                     <div class="project-content">
@@ -536,7 +536,7 @@
                 <!-- Animation Page -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/Animation-site.png" alt="Animation Project"
+                        <img src="/Portfolio/Image/Animation-site.png" alt="Animation Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/Animation-site.png'">
                     </div>
                     <div class="project-content">
@@ -571,7 +571,7 @@
                 <!-- Bootstrap Template -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/Bootstrap-site.png" alt="Bootstrap Template Project"
+                        <img src="/Portfolio/Image/Bootstrap-site.png" alt="Bootstrap Template Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/Bootstrap-site.png'">
                     </div>
                     <div class="project-content">
