--- a/html/index.html
+++ b/html/index.html
@@ -286,7 +286,6 @@
                             <i class="fa-solid fa-database" style="color: #4285f4;"></i>
                             <div class="cert-name"data-translate="oci_data">Oracle Cloud Data Foundations Associate</div>
                             <div class="cert-status in-progress" data-translate="status_in_progress">In Progress</div>
-                            <div class="cert-date" data-translate="currently_working">Currently Working On</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-clock"></i> <span data-translate="in_progress">In Progress</span>
@@ -315,7 +314,6 @@
                             <i class="fa-solid fa-users" style="color: #34A853;"></i>
                             <div class="cert-name" data-translate="oci_hcm">Oracle Fusion Cloud HCM Process Essentials</div>
                             <div class="cert-status planned" data-translate="status_coming_soon">Coming Soon</div>
-                            <div class="cert-date" data-translate="hcm">Human Capital Management</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-hourglass-half"></i> <span data-translate="soon">Soon</span>
@@ -330,7 +328,6 @@
                             <i class="fa-solid fa-chart-line" style="color: #EA4335;"></i>
                             <div class="cert-name" data-translate="oci_erp">Oracle Fusion Cloud ERP Process Essentials</div>
                             <div class="cert-status planned" data-translate="status_coming_soon">Coming Soon</div>
-                            <div class="cert-date" data-translate="erp">Enterprise Resource Planning</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-hourglass-half"></i> <span data-translate="soon">Soon</span>
@@ -345,7 +342,6 @@
                             <i class="fa-solid fa-handshake" style="color: #FBBC04;"></i>
                             <div class="cert-name" data-translate="oci_cx">Oracle Fusion Cloud CX Process Essentials</div>
                             <div class="cert-status planned" data-translate="status_coming_soon">Coming Soon</div>
-                            <div class="cert-date" data-translate="cx">Customer Experience</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-hourglass-half"></i> <span data-translate="soon">Soon</span>
@@ -360,7 +356,6 @@
                             <i class="fa-solid fa-truck" style="color: #764ba2;"></i>
                             <div class="cert-name" data-translate="oci_scm">Oracle Fusion Cloud SCM Process Essentials</div>
                             <div class="cert-status planned" data-translate="status_coming_soon">Coming Soon</div>
-                            <div class="cert-date" data-translate="scm">Supply Chain Management</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-hourglass-half"></i> <span data-translate="soon">Soon</span>
@@ -385,7 +380,7 @@
                 <!-- QR Reader -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Portfolio/Image/QR-reader.jpg" alt="QR Reader Project" 
+                        <img src="../Image/QR-reader.jpg" alt="QR Reader Project" 
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/QR-reader.jpg'">
                     </div>
                     <div class="project-content">
@@ -395,11 +390,12 @@
                             <i class="fa-brands fa-css3-alt" style="color: #1572b6;"></i>
                             <i class="fa-brands fa-js" style="color: #f7df1e;"></i>
                         </div>
-                        <p class="project-description">
-                            <strong data-translate="why_built">Why I built this:</strong> 
-                            <span data-translate="qr_description">Most QR code readers rely on a camera or online tools, which isn't always practical or secure.
-                            I needed a quick way to scan QR codes from images on my desktop — so I built a private, lightweight tool that works offline without uploading anything.</span>
-                        </p>
+                            <p class="project-description">
+                                <span data-translate="qr_description">
+                                    A lightweight tool designed for scanning QR codes directly from images on a desktop.  
+                                    It removes the need for cameras or online services and ensures full privacy by processing files locally.
+                                </span>
+                            </p>
                         <div class="project-features">
                             <h6 data-translate="features">Features:</h6>
                             <ul class="features-list">
@@ -421,7 +417,7 @@
                 <!-- PDF Editor -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Portfolio/Image/pdf-editor.jpg" alt="PDF Editor Project"
+                        <img src="../Image/pdf-editor.jpg" alt="PDF Editor Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/pdf-editor.jpg'">
                     </div>
                     <div class="project-content">
@@ -431,10 +427,11 @@
                             <i class="fa-brands fa-css3-alt" style="color: #1572b6;"></i>
                             <i class="fa-brands fa-js" style="color: #f7df1e;"></i>
                         </div>
-                        <p class="project-description">
-                            <strong data-translate="why_built">Why I built this:</strong> 
-                            <span data-translate="pdf_description">Most free PDF tools are limited or require sketchy software — so I created a clean, browser-based solution. Lightweight editor for combining, splitting, and converting PDFs without uploading sensitive documents online.</span>
-                        </p>
+                            <p class="project-description">
+                                <span data-translate="pdf_description">
+                                    This website was developed to provide a clean and secure browser-based PDF tool. It offers a lightweight editor for merging, splitting, and converting PDFs — without the limitations of typical free tools or the need to upload sensitive documents online.
+                                </span>
+                            </p>
                         <div class="project-features">
                             <h6 data-translate="features">Features:</h6>
                             <ul class="features-list">
@@ -461,7 +458,7 @@
 <div class="project-card">
     <div class="project-image">
         <span class="status-badge" data-translate="in_progress">In Progress</span>
-        <img src="/Portfolio/Image/QnA.png" alt="Q&A Game Project"
+        <img src="../Image/QnA.png" alt="Q&A Game Project"
         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/QnA.png'">
     </div>
     <div class="project-content">
@@ -469,10 +466,9 @@
         <div class="tech-stack">
             <!-- icons -->
         </div>
-        <p class="project-description">
-            <strong data-translate="why_built">Why I built this:</strong> 
-            <span data-translate="qna_description">I noticed my friends were paying for limited quiz games online — so I built a free, customizable alternative that we could use together. This web-based quiz game allows multiplayer interaction with custom team management, question categories, and scoring.</span>
-        </p>
+            <p data-translate="qna_description">
+                This website was created as a free and customizable alternative to paid quiz platforms that my friends used. It offers a web-based multiplayer quiz experience with flexible team management, various question categories, and an integrated scoring system.
+            </p>
         <div class="project-features">
             <h6 data-translate="features">Features:</h6>
             <ul class="features-list">
@@ -499,7 +495,7 @@
                 <!-- Shop Application -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Portfolio/Image/shop.png" alt="Shop Application Project"
+                        <img src="../Image/shop.png" alt="Shop Application Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/shop.png'">
                     </div>
                     <div class="project-content">
@@ -536,7 +532,7 @@
                 <!-- Animation Page -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Portfolio/Image/Animation-site.png" alt="Animation Project"
+                        <img src="../Image/Animation-site.png" alt="Animation Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/Animation-site.png'">
                     </div>
                     <div class="project-content">
@@ -571,7 +567,7 @@
                 <!-- Bootstrap Template -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Portfolio/Image/Bootstrap-site.png" alt="Bootstrap Template Project"
+                        <img src="../Image/Bootstrap-site.png" alt="Bootstrap Template Project"
                         onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/Bootstrap-site.png'">
                     </div>
                     <div class="project-content">
