--- a/html/index.html
+++ b/html/index.html
@@ -106,11 +106,11 @@
     <!-- Skills Section -->
     <section class="section" id="skills">
         <div class="container">
-            <h2 class="section-title" data-translate="technical_skills">Technical Skills</h2>
+            <h2 class="section-title" data-translate="technical_skills">Skills</h2>
             <div class="section-content">
-                <!-- IT Support Skills -->
+                <!-- Technical Skills -->
                 <div class="skills-category it">
-                    <h5><i class="fas fa-tools me-2"></i><span data-translate="it_support">IT & Support Knowledge</span></h5>
+                    <h5><i class="fas fa-tools me-2"></i><span data-translate="it_support">Technical Skills</span></h5>
                     <div class="skills-grid">
                         <div class="skill-card">
                             <i class="fa-solid fa-computer" style="color: #4facfe;"></i>
