--- a/html/index.html
+++ b/html/index.html
@@ -392,8 +392,8 @@
                         </div>
                             <p class="project-description">
                                 <span data-translate="qr_description">
-                                    A lightweight tool designed for scanning QR codes directly from images on a desktop.  
-                                    It removes the need for cameras or online services and ensures full privacy by processing files locally.
+                                    <strong>Before using the app:</strong> Make sure to upload a clear, high-resolution image of the QR code, otherwise it may not be detected correctly.
+                                    This lightweight desktop tool then allows you to scan QR codes directly from your images, without needing a camera or online service, ensuring complete privacy by processing files locally.
                                 </span>
                             </p>
                         <div class="project-features">
