--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-10">
                     <div class="hero-content">
                         <h1 class="hero-title" data-translate="name_title">Hossam Alsaedi</h1>
-                        <p class="hero-subtitle" data-translate="job_title">IT specialist & Web Developer</p>
+                        <p class="hero-subtitle" data-translate="job_title">IT Specialist & Web Developer</p>
                         <p class="hero-description" data-translate="hero_description">
                             I'm someone who enjoys working with technology, whether it's building simple web projects or solving everyday computer issues.
                             I'm comfortable with Microsoft Office, web development basics, and using AI tools to make my work more efficient.
