adding features to projects

--- a/html/index.html
+++ b/html/index.html
@@ -401,6 +401,7 @@
                             <ul class="features-list">
                                 <li data-translate="feature_reading_qr">Reading QR code</li>
                                 <li data-translate="feature_responsive">Responsive Design</li>
+                                <li data-translate="Bilingual_Support">Bilingual Support</li>
                             </ul>
                         </div>
                         <div class="project-links">
@@ -436,6 +437,7 @@
                             <h6 data-translate="features">Features:</h6>
                             <ul class="features-list">
                                 <li data-translate="feature_responsive">Responsive Design</li>
+                                <li data-translate="Bilingual_Support">Bilingual Support</li>
                                 <li data-translate="feature_merge_pages">Merging Pages</li>
                                 <li data-translate="feature_merge_files">Merging Files</li>
                                 <li data-translate="feature_convert_img">Convert Image to PDF</li>
@@ -455,42 +457,42 @@
                 </div>
 
                 <!-- QnA Game -->
-<div class="project-card">
-    <div class="project-image">
-        <span class="status-badge" data-translate="in_progress">In Progress</span>
-        <img src="../Image/QnA.png" alt="Q&A Game Project"
-        onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/QnA.png'">
-    </div>
-    <div class="project-content">
-        <h3 class="project-title" data-translate="qna_title">Q&A Game</h3>
-        <div class="tech-stack">
-            <!-- icons -->
-        </div>
-            <p data-translate="qna_description">
-                This website was created as a free and customizable alternative to paid quiz platforms that my friends used. It offers a web-based multiplayer quiz experience with flexible team management, various question categories, and an integrated scoring system.
-            </p>
-        <div class="project-features">
-            <h6 data-translate="features">Features:</h6>
-            <ul class="features-list">
-                <li data-translate="feature_responsive">Responsive Design</li>
-                <li data-translate="feature_team_mgmt">Team Management</li>
-                <li data-translate="feature_team_abilities">Team Abilities</li>
-                <li data-translate="feature_categories">Multiple Categories</li>
-                <li data-translate="feature_save_game">Save Game</li>
-                <li data-translate="feature_points">Points System</li>
-                <li data-translate="feature_animations">Animations</li>
-            </ul>
-        </div>
-        <div class="project-links">
-            <a href="https://github.com/HossamAlsaedi/QnA_Game/tree/master" target="_blank" class="project-link code">
-                <i class="fab fa-github me-2"></i><span data-translate="view_code">View Code</span>
-            </a>
-            <a href="https://hossamalsaedi.github.io/QnA_Game/#/" target="_blank" class="project-link demo">
-                <i class="fas fa-external-link-alt me-2"></i><span data-translate="live_demo">Live Demo</span>
-            </a>
-        </div>
-    </div>
-</div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <span class="status-badge" data-translate="in_progress">In Progress</span>
+                        <img src="../Image/QnA.png" alt="Q&A Game Project"
+                        onerror="this.src='https:/\/raw.githubusercontent.com/HossamAlsaedi/Portfolio/main/Image/QnA.png'">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title" data-translate="qna_title">Q&A Game</h3>
+                        <div class="tech-stack">
+                            <!-- icons -->
+                        </div>
+                            <p data-translate="qna_description">
+                                This website was created as a free and customizable alternative to paid quiz platforms that my friends used. It offers a web-based multiplayer quiz experience with flexible team management, various question categories, and an integrated scoring system.
+                            </p>
+                        <div class="project-features">
+                            <h6 data-translate="features">Features:</h6>
+                            <ul class="features-list">
+                                <li data-translate="feature_responsive">Responsive Design</li>
+                                <li data-translate="feature_team_mgmt">Team Management</li>
+                                <li data-translate="feature_team_abilities">Team Abilities</li>
+                                <li data-translate="feature_categories">Multiple Categories</li>
+                                <li data-translate="feature_save_game">Save Game</li>
+                                <li data-translate="feature_points">Points System</li>
+                                <li data-translate="feature_animations">Animations</li>
+                            </ul>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/HossamAlsaedi/QnA_Game/tree/master" target="_blank" class="project-link code">
+                                <i class="fab fa-github me-2"></i><span data-translate="view_code">View Code</span>
+                            </a>
+                            <a href="https://hossamalsaedi.github.io/QnA_Game/#/" target="_blank" class="project-link demo">
+                                <i class="fas fa-external-link-alt me-2"></i><span data-translate="live_demo">Live Demo</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
                 <!-- Shop Application -->
                 <div class="project-card">
